# vto-core

./: .gitignore  LICENSE  README.md  backup-core.sh  pyproject.toml  tz-DEV-2025-03-14_10:24.json  tz.json
vto_core/: admin.py  apps.py  models.py  urls.py  views.py
vto_core/admin/: __init__.py  dem_a.py  tzn_a.py  usr_a.py
vto_core/migrations/: 0001_initial.py
vto_core/models/: __init__.py  dem_m.py  tzn_m.py  usr_m.py
vto_core/templates/admin/: base.html  base_site.html
vto_core/templates/registration/: login.html
vto_core/templates/time/: demo-ts-list.dtl  tz_list.dtl
vto_core/templatetags/: markdown_extras.py
vto_core/views/: __init__.py  dem_v.py  tzn_v.py
